<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miMessage"
        android:icon="@drawable/ic_message"
        android:onClick="onMessageView"
        android:orderInCategory="1"
        android:title="@string/messages"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/miProfile"
        android:icon="@drawable/ic_profile"
        android:onClick="onProfileView"
        android:orderInCategory="2"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/miActionSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="3"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/miActionProgress"
        android:orderInCategory="100"
        android:title="@string/loading"
        android:visible="false"
        app:actionLayout="@layout/action_view_progress"
        app:showAsAction="always"/>

</menu>