<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rlSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        tools:context="org.agoenka.tweeterjam.fragments.SendMessageFragment">

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_action_clear"
            tools:text="Cancel"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilScreenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnCancel"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:hintTextAppearance="@style/hintOverflowText">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/hint_screen_name"
                tools:text="User Name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilScreenName"
            android:layout_marginBottom="@dimen/fragment_item_margin"
            android:layout_marginTop="@dimen/fragment_item_margin"
            app:hintTextAppearance="@style/hintOverflowText">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="start"
                android:hint="@string/hint_message_send"
                android:inputType="textMultiLine"
                android:minLines="10"
                tools:text="Direct Message"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_tweet_states"
            android:text="@string/send"
            android:textColor="@android:color/white"
            tools:text="Send"/>

    </RelativeLayout>

</layout>