<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="org.agoenka.tweeterjam.fragments.DetailFragment.Handlers"/>

        <variable
            name="handlers"
            type="Handlers"/>

        <variable
            name="tweet"
            type="org.agoenka.tweeterjam.models.Tweet"/>
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/rlDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="@dimen/profile_image_width"
                android:layout_height="@dimen/profile_image_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/profile_image_description"
                android:onClick="@{handlers.onProfile}"
                app:profileImageUrl="@{tweet.user.profileImageUrl}"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/ivProfileImage"
                android:layout_toRightOf="@+id/ivProfileImage"
                android:text="@{tweet.user.name}"
                android:textStyle="bold"
                tools:text="My Name"/>

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvName"
                android:layout_alignStart="@+id/tvName"
                android:layout_below="@+id/tvName"
                android:text="@{tweet.user.screenName}"
                tools:text="My User Name"/>

        </RelativeLayout>

        <org.agoenka.tweeterjam.views.LinkifiedTextView
            android:id="@+id/tvBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:autoLink="all"
            android:text="@{tweet.body}"
            tools:text="Tweet Text"/>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:maxHeight="@dimen/media_image_max_height"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/rlVideo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/media_video_height"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:visibility="gone">

            <com.malmstein.fenster.view.FensterVideoView
                android:id="@+id/vvFensterVideo"
                android:layout_width="@dimen/media_video_width"
                android:layout_height="@dimen/media_video_height"
                android:keepScreenOn="true"
                app:scaleType="crop"/>

            <com.malmstein.fenster.controller.SimpleMediaFensterPlayerController
                android:id="@+id/vvFensterController"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/vvFensterVideo"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@id/vvFensterVideo"
                android:animateLayoutChanges="true"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llCounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvRetweetCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{tweet.retweetCount}"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                tools:text="133000"/>

            <TextView
                android:id="@+id/tvRetweetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retweets"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryText"
                tools:text="  RETWEETS"/>

            <TextView
                android:id="@+id/tvFavoriteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/user_counts_horizontal_margin"
                android:layout_marginStart="@dimen/user_counts_horizontal_margin"
                android:text="@{tweet.favoriteCount}"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                tools:text="955686"/>

            <TextView
                android:id="@+id/tvFavoriteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondaryText"
                tools:text="  FAVORITES"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/image_button_horizontal_margin"
                android:layout_marginRight="@dimen/image_button_horizontal_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/reply"
                android:onClick="@{handlers.onReply}"
                android:src="@drawable/ic_action_reply"/>

            <ImageButton
                android:id="@+id/ibRetweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/image_button_horizontal_margin"
                android:layout_marginRight="@dimen/image_button_horizontal_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/retweet"
                android:onClick="@{handlers.onRetweet}"
                android:src="@{tweet.retweeted ? @drawable/ic_action_retweet_green : @drawable/ic_action_retweet_grey}"/>

            <ImageButton
                android:id="@+id/ibFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/image_button_horizontal_margin"
                android:layout_marginRight="@dimen/image_button_horizontal_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorite"
                android:onClick="@{handlers.onFavorite}"
                android:src="@{tweet.favorited ? @drawable/ic_action_favorite_green : @drawable/ic_action_favorite_grey}"/>

            <ImageButton
                android:id="@+id/ibShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share"
                android:onClick="@{handlers.onShare}"
                app:srcCompat="@drawable/ic_action_share"/>

        </LinearLayout>

    </LinearLayout>

</layout>