<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="org.agoenka.tweeterjam.activities.ComposeActivity.Handlers"/>

        <variable
            name="handlers"
            type="Handlers"/>

        <variable
            name="user"
            type="org.agoenka.tweeterjam.models.User"/>
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_compose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.agoenka.tweeterjam.activities.ComposeActivity">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="@{handlers.onCancel}"
            android:text="@string/cancel"
            tools:text="Cancel Button"/>

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/profile_image_description"
            app:profileImageUrl="@{user.profileImageUrl}"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivProfileImage"
            android:layout_toEndOf="@id/btnCancel"
            android:layout_toLeftOf="@+id/ivProfileImage"
            android:layout_toRightOf="@id/btnCancel"
            android:layout_toStartOf="@+id/ivProfileImage"
            android:gravity="end"
            android:text="@{user.name}"
            tools:text="Name"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_toEndOf="@id/btnCancel"
            android:layout_toLeftOf="@+id/ivProfileImage"
            android:layout_toRightOf="@id/btnCancel"
            android:layout_toStartOf="@+id/ivProfileImage"
            android:gravity="end"
            android:text="@{user.screenName}"
            tools:text="User Name"/>

        <TextView
            android:id="@+id/tvInReplyTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfileImage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:gravity="start|center"
            android:drawableLeft="@drawable/ic_reply_to"
            android:drawableStart="@drawable/ic_reply_to"
            android:drawablePadding="5dp"
            android:visibility="gone"
            tools:text="In Reply To"/>

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="@{handlers.onTweet}"
            android:text="@string/tweet"
            tools:text="Tweet Button"/>

        <EditText
            android:id="@+id/etTweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnTweet"
            android:layout_below="@+id/tvInReplyTo"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/hint_tweet_compose"
            android:inputType="textMultiLine"
            tools:text="User Tweet"/>

        <TextView
            android:id="@+id/tvCharCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnTweet"
            android:layout_toStartOf="@+id/btnTweet"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            tools:text="Characters"/>

    </RelativeLayout>

</layout>