<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="org.agoenka.tweeterjam.fragments.ComposeTweetFragment.Handlers"/>

        <variable
            name="handlers"
            type="Handlers"/>

        <variable
            name="user"
            type="org.agoenka.tweeterjam.models.User"/>
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_compose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        tools:context="org.agoenka.tweeterjam.fragments.ComposeTweetFragment">

        <ImageButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:onClick="@{handlers.onCancel}"
            android:src="@drawable/ic_action_clear"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancel"
            tools:text="Cancel Button"/>

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/profile_image_width"
            android:layout_height="@dimen/profile_image_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/profile_image_vertical_margin"
            android:layout_marginLeft="@dimen/fragment_image_horizontal_margin"
            android:layout_marginStart="@dimen/fragment_image_horizontal_margin"
            android:contentDescription="@string/profile_image_description"
            app:profileImageUrl="@{user.profileImageUrl}"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivProfileImage"
            android:layout_toEndOf="@id/btnCancel"
            android:layout_toLeftOf="@+id/ivProfileImage"
            android:layout_toRightOf="@id/btnCancel"
            android:layout_toStartOf="@+id/ivProfileImage"
            android:gravity="end"
            android:text="@{user.name}"
            android:textStyle="bold"
            tools:text="Name"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_toEndOf="@id/btnCancel"
            android:layout_toLeftOf="@+id/ivProfileImage"
            android:layout_toRightOf="@id/btnCancel"
            android:layout_toStartOf="@+id/ivProfileImage"
            android:gravity="end"
            android:text="@{user.screenName}"
            tools:text="User Name"/>

        <TextView
            android:id="@+id/tvInReplyTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ivProfileImage"
            android:layout_marginBottom="@dimen/name_vertical_margin"
            android:drawableLeft="@drawable/ic_reply_to"
            android:drawablePadding="@dimen/text_drawable_padding"
            android:drawableStart="@drawable/ic_reply_to"
            android:gravity="start|center"
            android:visibility="gone"
            tools:text="In Reply To"/>

        <Button
            android:id="@+id/btnTweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="@{handlers.onTweet}"
            android:text="@string/tweet"
            android:background="@drawable/btn_tweet_states"
            android:textColor="@android:color/white"
            tools:text="Tweet Button"/>

        <EditText
            android:id="@+id/etTweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btnTweet"
            android:layout_below="@+id/tvInReplyTo"
            android:layout_marginBottom="@dimen/fragment_item_margin"
            android:gravity="start"
            android:hint="@string/hint_tweet_compose"
            android:inputType="textMultiLine"
            tools:text="User Tweet"/>

        <TextView
            android:id="@+id/tvCharCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnTweet"
            android:layout_alignBottom="@+id/btnTweet"
            android:layout_toLeftOf="@+id/btnTweet"
            android:layout_toStartOf="@+id/btnTweet"
            android:layout_marginRight="@dimen/fragment_item_margin"
            android:layout_marginEnd="@dimen/fragment_item_margin"
            tools:text="Characters"/>

    </RelativeLayout>

</layout>
