<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tweet"
            type="org.agoenka.tweeterjam.models.Tweet"/>
    </data>

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:descendantFocusability="blocksDescendants"
        android:padding="@dimen/item_layout_padding">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/profile_image_width"
            android:layout_height="@dimen/profile_image_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/profile_image_horizontal_margin"
            android:layout_marginRight="@dimen/profile_image_horizontal_margin"
            android:contentDescription="@string/profile_image_description"
            app:profileImageUrl="@{tweet.user.profileImageUrl}"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/name_vertical_margin"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:text="@{tweet.user.name}"
            android:textStyle="bold"
            tools:text="My Name"/>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@{tweet.duration}"
            tools:text="Duration"/>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/username_horizontal_margin"
            android:layout_marginStart="@dimen/username_horizontal_margin"
            android:layout_toEndOf="@+id/tvName"
            android:layout_toLeftOf="@id/tvDuration"
            android:layout_toRightOf="@+id/tvName"
            android:layout_toStartOf="@id/tvDuration"
            android:text="@{tweet.user.screenName}"
            tools:text="My User Name"/>

        <org.agoenka.tweeterjam.views.LinkifiedTextView
            android:id="@+id/ltvBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:autoLink="all"
            android:text="@{tweet.body}"
            tools:text="Tweet Text"/>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ltvBody"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_description"
            android:maxHeight="@dimen/media_image_max_height"
            android:visibility="gone"/>

        <com.yqritc.scalablevideoview.ScalableVideoView
            android:id="@+id/vvVideo"
            android:layout_width="@dimen/media_video_width"
            android:layout_height="@dimen/media_video_height"
            android:layout_below="@id/ivImage"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:visibility="gone"
            app:scalableType="fitCenter"/>

        <LinearLayout
            android:id="@+id/llActions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vvVideo"
            android:layout_marginBottom="@dimen/fragment_item_margin"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/actions_horizontal_margin"
                android:layout_marginRight="@dimen/actions_horizontal_margin"
                android:background="@android:color/transparent"
                android:contentDescription="@string/reply"
                android:src="@drawable/ic_action_reply"/>

            <ImageButton
                android:id="@+id/ibRetweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/retweet"
                android:src="@{tweet.retweeted ? @drawable/ic_action_retweet_green : @drawable/ic_action_retweet_grey}"
                tools:src="@drawable/ic_action_retweet_grey"/>

            <TextView
                android:id="@+id/tvRetweetCount"
                android:layout_width="@dimen/actions_count_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/actions_horizontal_secondary_margin"
                android:layout_marginLeft="@dimen/fragment_item_margin"
                android:layout_marginRight="@dimen/actions_horizontal_secondary_margin"
                android:layout_marginStart="@dimen/fragment_item_margin"
                android:text="@{tweet.retweetCount}"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                tools:text="99999"/>

            <ImageButton
                android:id="@+id/ibFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/favorite"
                android:src="@{tweet.favorited ? @drawable/ic_action_favorite_green : @drawable/ic_action_favorite_grey}"
                tools:src="@drawable/ic_action_favorite_grey"/>

            <TextView
                android:id="@+id/tvFavoriteCount"
                android:layout_width="@dimen/actions_count_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/fragment_item_margin"
                android:layout_marginStart="@dimen/fragment_item_margin"
                android:text="@{tweet.favoriteCount}"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                tools:text="99999"/>

        </LinearLayout>

    </RelativeLayout>

</layout>